[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
categories = ["no-std", "rust-patterns"]
description = "plain old pointers - a pointer type with no extras"
edition = "2021"
license = "Artistic-2.0"
name = "plain-old-pointers"
repository = "https://github.com/apribadi/pop"
version = "1.0.0"

[lib]
name = "pop"

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "allow"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
