[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
categories = ["no-std", "rust-patterns"]
description = "plain old pointer - a pointer type with nothing extra"
edition = "2024"
keywords = ["pointers"]
license = "Artistic-2.0"
name = "plain-old-pointer"
repository = "https://github.com/apribadi/pop"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "pop"

[features]
alloc = []
default = ["alloc"]

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
